Fix bug:"you must be logged in" message - Style registration page to not overlap current user info

--- a/app/assets/stylesheets/new_identity.css.scss
+++ b/app/assets/stylesheets/new_identity.css.scss
@@ -4,7 +4,8 @@
 
 main.new-gold-standard {
   padding: 20px 50px 20px 50px;
-  
+  margin-top: 30px;
+
   h1 {
     text-align: center;
     font-size: 26px;
